@@ -53,8 +53,10 @@ install-data-hook:
 	$(top_srcdir)/substitute $(SED) "@sub_PREFIX@" ${prefix} pyextrae/common/extrae.py
 #if HAVE_PAPI
 	$(top_srcdir)/substitute $(SED) "@sub_Extrae_eventandcounters@" Extrae_eventandcounters pyextrae/common/extrae.py
+	$(top_srcdir)/substitute $(SED) "@sub_Extrae_neventandcounters@" Extrae_neventandcounters pyextrae/common/extrae.py
 #else
 	$(top_srcdir)/substitute $(SED) "@sub_Extrae_eventandcounters@" Extrae_event pyextrae/common/extrae.py
+	$(top_srcdir)/substitute $(SED) "@sub_Extrae_neventandcounters@" Extrae_nevent pyextrae/common/extrae.py
 #endif
 	mkdir -p $(libexecdir)/pyextrae
 	cp -rL pyextrae/* $(libexecdir)/pyextrae
